feat(songs): add streaming
